<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context="com.shfc.youchu.CashOnDeliveryDeliverEntranceActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    	
    	<TextView 
    	    android:layout_width="fill_parent"
    	    android:layout_height="60dp"
    	    android:background="@color/white" />
        
    	<ImageView
        	android:id="@+id/cod_logo_pic"
        	android:layout_width="wrap_content"
        	android:layout_height="60dp"
        	android:src="@drawable/logo"
        	android:background="@color/white"
        	android:contentDescription="@string/app_logo_yc" />
    	
    </RelativeLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textSize="50sp" 
        android:textColor="@color/darkgreen"
        android:text="@string/succeed"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textSize="25sp" 
        android:textColor="@color/darkgreen"
        android:text="@string/succeed_back"
        android:layout_marginBottom="100dp" />

    <Button
   	    android:id="@+id/succeed_back"
   	    android:layout_width="200dp"
   	    android:layout_height="wrap_content"
   	    android:layout_marginBottom="30dp"
   	    android:background="@drawable/commen_btn"
        android:textColor="@color/white"
        android:textColorHighlight="@color/lightgreen"
        android:textSize="30sp"
        android:visibility="visible"
        android:layout_gravity="center_vertical|center_horizontal"
   	    android:text="@string/comfirm" />
    
</LinearLayout>

