<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgreen" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/darkgreen" >
    	
        <Button 
            android:id="@+id/cod_keyboard_goback_btn"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="11dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_btn"
            android:text="@string/goback_txt"
            android:textColor="@color/darkgreen" />
    	
    </RelativeLayout>
    
    <TextView 
       android:layout_width="wrap_content"
       android:layout_height="40dp"
       android:layout_marginTop="40dp"
       android:text="@string/please_input_password"
       android:textColor="@color/darkgreen"
       android:textSize="30sp"
       android:layout_gravity="center_vertical|center_horizontal"
        >
    </TextView>
        
    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/white"
        android:height="40dp" >
        
	    <TextView 
   	   		android:id="@+id/digit_password_textview"
   	   		android:layout_width="wrap_content"
   	   		android:inputType="textPassword"
   	   		android:password="true"
  	   		android:layout_height="50dp"
   	   		android:textSize="50sp"
   	   		android:textColor="@android:color/black"
       		android:layout_gravity="center_vertical|center_horizontal"
   			>
   		</TextView>
    		
    </LinearLayout>
    	
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical|center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        
        	<Button  
                android:id="@+id/digitkeypad_1"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"  
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="1"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
            
        	<Button  
                android:id="@+id/digitkeypad_2"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp"
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"    
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="2"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
            
        	<Button  
                android:id="@+id/digitkeypad_3"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp"  
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"  
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="3"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical|center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        
        	<Button  
                android:id="@+id/digitkeypad_4"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp" 
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"   
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="4"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
            
        	<Button  
                android:id="@+id/digitkeypad_5"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp"  
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"  
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="5"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
            
        	<Button  
                android:id="@+id/digitkeypad_6"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp"  
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"  
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="6"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical|center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        
        	<Button  
                android:id="@+id/digitkeypad_7"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp"  
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"  
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="7"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
            
        	<Button  
                android:id="@+id/digitkeypad_8"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp"  
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"  
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="8"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
            
        	<Button  
                android:id="@+id/digitkeypad_9"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp"  
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"  
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="9"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical|center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        
        	<Button  
                android:id="@+id/digitkeypad_cl"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp" 
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"   
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="取消"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
            
        	<Button  
                android:id="@+id/digitkeypad_0"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp" 
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"   
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="0"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
            
        	<Button  
                android:id="@+id/digitkeypad_ok"  
                android:layout_width="wrap_content"  
                android:layout_height="46dp"  
                android:layout_marginLeft="4dp"  
                android:layout_marginRight="2dp"  
                android:layout_marginStart="4dp"  
                android:layout_marginEnd="2dp"  
                android:layout_weight="1"  
                android:background="@drawable/commen_btn"  
                android:gravity="center"  
                android:text="@string/comfirm"  
                android:textColor="@color/white"
                android:textSize="22sp" >  
            </Button>  
    </LinearLayout>
</LinearLayout>
